# nl-to-dsl-strategy-compiler

./: .gitignore  README.md  ast_builder.py  ast_nodes.py  ast_to_python.py  demo.py  dsl_grammar.lark  indicators.py  llm_client.py  nl_to_dsl.py  parser.py  pyproject.toml  requirements.txt  sample_data.csv  simulator.py
tests/: test_ast_generator.py  test_parser.py  test_simulator.py
