[project]
name = "rootaly-ai-assignment"
version = "0.1.0"
description = "NLP to Trading Strategy Pipeline: Convert natural language trading rules into executable Python code and run backtests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]
